# bassplay_2

./: CMakeLists.txt  README.md  main.cpp
app/: BassplayApp.cpp  BassplayApp.h  BassplayApp.hpp
cmake/: Catch.cmake
common/: wx.h  wx.hpp
event/: BassplayEvent.h  BassplayEvent.hpp  BassplayEventDispatcher.cpp  BassplayEventDispatcher.h  BassplayEventDispatcher.hpp  BassplayEventType.h  BassplayEventType.hpp  BassplayPlaybackEvent.h  BassplayPlaybackEvent.hpp  IBassplayEventHandler.h  IBassplayEventHandler.hpp
exception/: BassException.cpp  BassException.h  BassplayException.cpp  BassplayException.h  BassplayException.hpp
listener/: GuiThreadPauseListener.cpp  GuiThreadPauseListener.h  GuiThreadPauseListener.hpp
play/: CMakeLists.txt  Player.cpp  Player.h  Player.hpp  Song.cpp  Song.h  Song.hpp
play/collection/: SongCollection.cpp  SongCollection.h  SongCollection.hpp
play/history/: HistoryDirNotFoundException.hpp  facade.cpp  facade.hpp  history.cpp  history.hpp  util.cpp  util.hpp
play/parser/: JsonNode.h  JsonParser.cpp  JsonParser.h
play/persistence/: AbstractCollectionPersister.h  FileCollectionPersister.cpp  FileCollectionPersister.h  ICollectionPersister.h  PlaybackHistoryPersister.cpp  PlaybackHistoryPersister.hpp
play/serializer/: AbstractSongCollectionSerializer.h  ISerializable.h  ISerializable.hpp  ISongCollectionSerializer.h  ISongCollectionSerializer.hpp  ISongSerializer.h  ISongSerializer.hpp  InvalidSerializerException.cpp  InvalidSerializerException.h  InvalidSerializerException.hpp  JsonSongCollectionSerializer.cpp  JsonSongCollectionSerializer.h  JsonSongSerializer.cpp  JsonSongSerializer.h  JsonSongSerializer.hpp  SerializableStringList.cpp  SerializableStringList.h  SerializableStringList.hpp
play/tools/: StringTools.cpp  StringTools.hpp
play/transformer/: CollectionDataSource.h  ISongCollectionTransformer.h  ISongTransformer.h  JsonSongCollectionTransformer.cpp  JsonSongCollectionTransformer.h  JsonSongTransformer.cpp  JsonSongTransformer.h  JsonSongTransformer.hpp
test/: CMakeLists.txt  compiled_tests.cpp  tests.cpp
thread/: GuiThread.cpp  GuiThread.h  GuiThread.hpp
ui/: DpiAwareFrame.h  DpiAwareFrame.hpp  PlayerFrame.cpp  PlayerFrame.h  PlayerFrame.hpp  SongInfoFrame.cpp  SongInfoFrame.h  SongInfoFrame.hpp
